<resources>
    <string name="app_name">Notepad Kotlin</string>

    <string name="txt_title">My Notepad</string>
    <string name="txt_last_modified" />

    <string name="input_placeholder_note_title">Title</string>
    <string name="input_placeholder_note_body">Note</string>
    <string name="btn_label_save_note">save</string>
    <string name="txt_note_title" />
    <string name="txt_note_body" />
</resources>
